# CPE727-2025-03

./: .gitignore  LICENSE  README.md  config.yaml  config_xray.yaml  download_data.py
Seminarios/7 - AE/DenoisingAutoencoder/: Dockerfile  README.md  build_image.sh  pyproject.toml  reqruirements.txt  requirements.txt
Seminarios/7 - AE/DenoisingAutoencoder/denoising_autoencoder/: cli.py  utils.py
Seminarios/7 - AE/DenoisingAutoencoder/denoising_autoencoder/denoise/: __init__.py  experiment.py
Seminarios/7 - AE/DenoisingAutoencoder/denoising_autoencoder/models/: README.md  __init__.py  denoising_autoencoder.py
Seminarios/7 - AE/experiments/autoencoder_nlp/: Dockerfile  README.md  Reporting.ipynb  pyproject.toml
Seminarios/7 - AE/experiments/autoencoder_nlp/autoencoder_nlp/: cli.py  download_dataset.py  evaluate.py  rcv1_dataset.py  train.py
TrabalhoFinal/FelipeGrael/: Baseline TFIDF.ipynb  README.md  Untitled.ipynb  pyproject.toml  test_tokenizer.ipynb
TrabalhoFinal/FelipeGrael/docs/: README.md  Taskfile.yml  beamerthemesintef.sty  deep_sentence.bbl  deep_sentence.blg  deep_sentence.tex  presentation_bib.bib
TrabalhoFinal/FelipeGrael/docs/assets/: Diagramas.drawio
TrabalhoFinal/FelipeGrael/src/: Autoencoder.ipynb  Untitled.ipynb
TrabalhoFinal/FelipeGrael/src/deep_sentences/: autoencoder.py  cli.py  embeddings.py  models.py  tokenizer.py  train.py  tune.py  xval.py
TrabalhoFinal/FelipeGrael/src/deep_sentences/dataloaders/: __init__.py  base.py  stsb.py
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  STRUCTURE.txt  docker-compose.yml  pyproject.toml  requirements.txt  run_experiments.py  setup_local.sh  test_dataset.py  test_imports.py  verify_pipeline.py
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/IARA/: .gitignore
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/IARA/src/: setup.py
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/IARA/test_scripts/: cnn.py  collection.py  confidence_analysis.py  cross_analysis.py  dataset_acess.py  mlp.py  mnist.py  processor.py  shipsear_resample.py  test_nimages.py
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/IARA/training_scripts/: cpa_presence.py  cross_dataset.py  grid_search.py  grid_search_ftest.py  grid_search_result_compiler.py  run_all.sh  shipears_grid.py
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/apresentacao/: Makefile
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/apresentacao/relatorio/: RELATORIO.tex
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/documentation/: PROPOSTA.tex
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/examples/: mlflow_example.py
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/notebooks/: run_eda.py
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/scripts/: setup_gcp_instance.sh  setup_training_env.sh  train_baseline_cnn.py  train_production.py  tune_hyperparameters.py
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/src/: __init__.py  config.py  data_loader.py  data_loader_agnews.py  data_loader_agnews_tokenized.py  dataset.py  estimate_training_time.py  evaluate_baseline_models.py  experiment_tracker.py  features.py  final_evaluation.py  final_evaluation_agnews.py  hierarchical_experiment.py  hyperparameter_tuning.py  hyperparameter_tuning_agnews.py  hyperparameters.py  hyperparameters_agnews.py  hyperparameters_fashion_mnist.py  models_deep.py  train.py  train_agnews.py  train_deep.py  train_deep_fast.py  train_with_pca.py  utils.py
TrabalhoFinal/MiguelFernandesSousa/trabalho_final_CPE727/tests/: conftest.py  test_a_folder.py  test_pipeline.py
TrabalhoFinal/RafaelTadeu/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
TrabalhoFinal/RafaelTadeu/conf/base/: catalog.yml  parameters.yml  parameters_data_processing.yml  parameters_dataset.yml  parameters_evaluation.yml  parameters_models.yml  parameters_training.yml  parameters_visualization.yml
TrabalhoFinal/RafaelTadeu/docs/: Taskfile.yml  beamerpolito.tex  beamerthemesintef.sty  devbox.json  presentation_bib.bib
TrabalhoFinal/RafaelTadeu/docs/.devcontainer/: Dockerfile
TrabalhoFinal/RafaelTadeu/notebooks/: 2025-12-08 DEA.ipynb  2025-12-08 Plot Results.ipynb  2025-12-10 Results Analysis.ipynb  2025-12-11 Test Results Analysis.ipynb
TrabalhoFinal/RafaelTadeu/src/eurosat_dl_comparison/: __init__.py  __main__.py  pipeline_registry.py  settings.py
TrabalhoFinal/RaphaelNagaoFerreira/: Dockerfile  pyproject.toml  requirements.txt
TrabalhoFinal/RaphaelNagaoFerreira/apresentacao/latex/: beamerpolito.tex  beamerthemesintef.sty  presentation_bib.bib
TrabalhoFinal/RaphaelNagaoFerreira/covidx_cxr4_classifier/: generate_best_models_metrics_and_stack.py  train.py  train_funcs.py
src/dataloaders/BreastCancerLoader/: pyproject.toml
src/dataloaders/BreastCancerLoader/breast_cancer_loader/: __init__.py  loader.py
src/dataloaders/DVSLoader/: README.md  pyproject.toml
src/dataloaders/MNISTLoader/: README.md  pyproject.toml
src/dataloaders/MNISTLoader/mnist_loader/: __init__.py  loader.py  test_loader.py  utils.py
src/experiments/BreastCancerMLPExperiment/: pyproject.toml
src/experiments/BreastCancerMLPExperiment/breast_cancer_mlp_experiment/: cli.py  train.py
src/experiments/CNNsComparisonMnistExperiment/: README.md  pyproject.toml
src/experiments/CNNsComparisonMnistExperiment/cnns_comparison_mnist_experiment/: cli.py  train.py
src/experiments/LRSchedulerExperiment/: README.md  pyproject.toml  requirements.txt
src/experiments/LRSchedulerExperiment/lr_scheduler_experiment/: cli.py  train.py
src/experiments/WineMLPExperiment/: Dockerfile  README.md  build_image.sh  pyproject.toml
src/experiments/WineMLPExperiment/wine_mlp_experiment/: cli.py
src/modules/eda/: README.md  pyproject.toml
src/modules/eda/eda/: __init__.py  adapters.py  cli.py  detector.py  profile_report.py
src/modules/eda/generators/wine/: generate_wine_eda.py
src/modules/preprocessing/BreastCancer/: pyproject.toml
(+947 files in other folders)
