[project]
name = "eurosat-dl-comparison"
version = "0.1.0"
description = "Evolution of Deep Learning Architectures in Land Use Classification: A Comparison between VGG, ResNet, and Vision Transformers"
readme = "README.md"
authors = [
    { name = "Rafael Tadeu", email = "rafael.tadeu@twistsystems.com" }
]
requires-python = ">=3.10"
dependencies = [
    "kedro>=1.1.1",
    "kedro-datasets[pandas-csvdataset,pillow-imagedataset]>=9.0.0",
    "kedro-viz>=12.2.0",
    "matplotlib>=3.10.7",
    "mlflow>=2.9.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.66.0",
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "pyarrow>=22.0.0",
]

[project.scripts]
eurosat-dl-comparison = "eurosat_dl_comparison.__main__:main"

[project.entry-points."kedro.hooks"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.version]
attr = "eurosat_dl_comparison.__version__"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "eurosat_dl_comparison"
project_name = "EuroSAT DL Comparison"
kedro_init_version = "1.1.1"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "af0ca370a529410d94bfafee0a718b94"
