[project]
name = "denoising_autoencoder"
version = "0.1.0"
description = "A denoising autoencoder experiment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.6.0",
    "mnist-loader",
    "torch>=2.9.1",
    "torchvision>=0.20.1",
    "typer>=0.16.0",
    "pyyaml>=6.0",
    "scikit-image>=0.24.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.67.0",
    "jupyterlab>=4.5.0",
    "torchviz>=0.0.3",
    "graphviz>=0.21",
]

[project.scripts]
denoising-autoencoder = "denoising_autoencoder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mnist-loader = { path = "../../dataloaders/MNISTLoader", editable = true }
