[project]
name = "iara-dl"
version = "0.1.0"
description = "Deep Learning experiments with IARA underwater acoustic database"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Miguel", email = "miguel@example.com"}
]
keywords = ["deep-learning", "underwater-acoustics", "audio-classification", "pytorch"]

dependencies = [
    # Core ML
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "timm>=0.9.12",
    "pytorch-lightning>=2.1.0",

    # Scientific computing
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.2",

    # Audio processing
    "librosa>=0.10.1",
    "soundfile>=0.12.1",

    # Machine learning
    "scikit-learn>=1.3.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # Utilities
    "tqdm>=4.66.0",
    "jsonpickle>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "ipython>=8.16.0",
    "ipykernel>=6.26.0",
]

experiment = [
    "tensorboard>=2.15.0",
    "wandb>=0.16.0",
    "mlflow>=2.9.0",
    "hydra-core>=1.3.0",
    "lightning>=2.1.0",
]

notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
