[project]
name = "breast_cancer_loader"
version = "0.1.0"
description = "DataLoader for UCI Breast Cancer dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.0.0",
    "torch>=2.6.0",
    "ucimlrepo>=0.0.3",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]
