[project]
name = "breast_cancer_mlp_experiment"
version = "0.1.0"
description = "Breast Cancer MLP experiment with preprocessing"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "breast-cancer-loader",
    "breast-cancer-preprocessing",
    "typer>=0.16.0",
    "torch>=2.6.0",
    "numpy>=2.3.1",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
breast-cancer-mlp-experiment = "breast_cancer_mlp_experiment.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
breast-cancer-loader = { path = "../../dataloaders/BreastCancerLoader", editable = true }
breast-cancer-preprocessing = { path = "../../modules/preprocessing/BreastCancer", editable = true }
