[project]
name = "template_experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "template-loader",
    "typer>=0.16.0",
    "torch>=2.7.1",
    "matplotlib>=3.8.0",
    "rich>=14.0.0",
]

[project.scripts]
template-experiment = "template_experiment.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
template-loader = { path = "../../dataloaders/TemplateLoader", editable = true }
