[project]
name = "wine_mlp_experiment"
version = "0.1.0"
description = "Wine Quality MLP experiment with L1 regularization"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "wine-quality-loader",
    "typer>=0.16.0",
    "torch>=2.6.0",
    "numpy>=2.3.1",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
wine-mlp-experiment = "wine_mlp_experiment.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
wine-quality-loader = { path = "../../dataloaders/WineQualityLoader", editable = true }
