[project]
name = "eda"
version = "0.1.0"
description = "Flexible EDA module for PyTorch datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.16.0,<2.2",
    "torch>=2.6.0",
    "ydata-profiling>=4.10.0",
    "typer>=0.16.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.10.1,<0.14",
]

[project.scripts]
eda-report = "eda.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
