[project]
name = "breast_cancer_preprocessing"
version = "0.1.0"
description = "Preprocessing utilities for UCI Breast Cancer dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]
